--- a/test/fixtures/missions.yml
+++ b/test/fixtures/missions.yml
@@ -1,13 +1,13 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  first_checkin: 1
-  last_checkout: 1
-  checkout_checkin: 1
+  date: 2022-12-15
+  mission_type: 1
+  price: 1
   listing: one
 
 two:
-  first_checkin: 1
-  last_checkout: 1
-  checkout_checkin: 1
+  date: 2022-12-15
+  mission_type: 1
+  price: 1
   listing: two
